kubernetes/apps/base/vikunja/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vikunja.local`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: vikunja-tls
